# bevy-website

./: .djlintrc  .editorconfig  .gitattributes  .gitignore  .harper-dictionary.txt  .markdownlint.yml  .mega-linter.yml  .pa11y-ci-dark.js  .pa11yci-dark  .pa11yci-dark.js  .pa11yci-light  404.html  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  TODOs.md  assets.js  atom.xml  changes.md  clipboard.js  commits_categorized.md  config.local.toml  config.toml  deletem.sh  desktop-mode.patch  donate.js  flake.nix  highlight-intrapage-link.js  index.html  invert_stream.py  invertme.sh  local_build_instructions.md  notes.md  pagefind.yml  raw_commits.txt  reindex.sh  remove-monitor-info-example.patch  (+12 more)
.github/: bors.toml  dependabot.yml
.github/ISSUE_TEMPLATE/: docs.md
.github/linters/: .markdown-lint.yml  markdown-link-check.json
.github/workflows/: build-wasm-examples.yml  ci.yml  deploy.yml  main.yml  rebase.yml  update-screenshots.yml
assets/: index.html
book-validation/: Cargo.toml  build.rs
book-validation/src/: lib.rs  main.rs
book-validation/src/learn/: mod.rs
book-validation/src/learn/book/: mod.rs
book-validation/src/learn/book/getting_started/: ecs.rs  mod.rs
code-validation/: Cargo.toml  README.md  rustfmt.toml
code-validation/src/: lib.rs
community/: index.html  links.toml
community/donate/: index.html
community/people/: index.html
content/: _index.md  _index.zh_cn.md  faq.md
content/community/: _index.md  links.toml
content/contribute/: _index.md  introduction.md
content/contributing/: _index.md  introduction.md  using-github-issues.md
content/donate/: _index.md  donors.toml  foundation-sponsors.toml  individual-sponsors.toml  metrics.toml  tiers.toml
content/faq/: index.md
content/foundation/: _index.md
content/games/: _index.md
content/learn/: _index.md  index.md  links.toml
content/news/: _index.md
content/roadmap/: _index.md
content/sponsorship-pledge/: _index.md
contributing/: index.html
contributing/getting-started/: index.html
contributing/reference/: index.html
donate/: donors.toml  index.html  individual-sponsors.toml  metrics.toml  sync_donors.sh
donate/faq/: index.html
donate/options/: index.html
examples/: index.html
examples-webgpu/: index.html
examples/transforms/: index.html
faq/: index.html
foundation/: index.html
foundation/budget/: index.html
foundation/bylaws/: index.html
foundation/meeting-minutes/: index.html
generate-assets/: .gitignore  Cargo.toml  README.md  generate_assets.sh  parse_old_readme.py
generate-assets/src/: github_client.rs  gitlab_client.rs  lib.rs  main.rs
generate-awesome/: .gitignore  Cargo.toml  generate_awesome.sh
generate-awesome/src/: main.rs
generate-community/: .gitignore  Cargo.toml  generate_community.sh
generate-community/src/: lib.rs
generate-errors/: .gitignore  Cargo.toml  README.md  download_errors.sh  generate_errors.sh
generate-errors/src/: lib.rs
generate-migration-guide/: .gitignore  Cargo.toml
generate-migration-guide/src/: github_client.rs  main.rs
generate-release/: .gitignore  Cargo.toml  README.md
generate-release/src/: changelog.rs  combine_migration_guides.rs  contributors.rs  github_client.rs  helpers.rs  main.rs  markdown.rs  migration_guide.rs  migration_guides.rs  release_notes.rs  release_notes_website.rs
generate-wasm-examples/: .gitignore  build_wasm_examples_debug.sh  clone_bevy.sh  generate_wasm_examples-webgpu.sh  generate_wasm_examples.sh
learn/: index.html  links.toml
learn/advanced-examples/: index.html
learn/book/: index.html
learn/contribute/: index.html
learn/errors/: index.html
learn/migration-guides/: index.html
learn/quick-start/: index.html
learning-code-examples/: Cargo.toml  README.md  validate_examples.sh
learning-code-examples/examples/quick-start/: generic_plugin.rs  getting_started_v1.rs  getting_started_v10.rs  getting_started_v2.rs  getting_started_v3.rs  getting_started_v4.rs  getting_started_v5.rs  getting_started_v6.rs  getting_started_v7.rs  getting_started_v8.rs  getting_started_v9.rs  mock_entity.rs  position_ecs.rs
news/: index.html
news/2025-xx-xx-bevy-0-16/: index.html
news/bevy-0-10/: index.html
news/bevy-0-11/: index.html
news/bevy-0-12/: index.html
news/bevy-0-13/: index.html
news/bevy-0-14/: index.html
news/bevy-0-15/: index.html
news/bevy-0-16/: index.html
news/bevy-0-17/: index.html
news/bevy-0-18/: index.html
news/bevy-0-19/: index.html
news/bevy-0-2/: index.html
news/bevy-0-3/: index.html
sass/: _assets.scss  _awesome.scss  _base.scss  _book-nav.scss  _book.scss  _card.scss  _community.scss  _content.scss  _features.scss  _features_cards.scss  _features_zip.scss  _functions.scss  _headerbar.scss  _mixins.scss  _news.scss  _print.scss  _syntax-theme.scss  _utils.scss  _variables.scss  _vars.scss  site.scss
sponsorship-pledge/: index.html
static/: CNAME  assets.js  components.js  footnotes.js  highlight-intrapage-link.js  on-this-page.js  optional-helpers.js  page-nav-highlight.js  page-nav-hilight.js  restart-audio-context.js  search-categories.mjs  search-dialog.mjs  search-tpl.mjs  search.js  search.mjs  tools.js  web-streams-adapter.mjs  web-streams-polyfill-3.2.1.mjs
syntaxes/: README.md  RON.sublime-syntax  WGSL.sublime-syntax  ron.json
templates/: 404.html  Not_found_404.html  anchor-link.html  assets.html  atom.xml  awesome.html  base.html  book-macros.html  book-section.html  book.html  community.html  docs-base.html  docs-page.html  docs-section.html  docs.html  donate-community.html  donate-options.html  donate.html  errors.html  example-webgpu.html  example.html  examples-webgpu.html  examples.html  faq.html  foundation.html  games.html  header-macros.html  index.html  index.zh_cn.html  individual-sponsors.html  learn.html  migration-guide-section.html  migration_guides.html  news-page.html  news.html  page.html  people.html  project-page.html  quick-start-section.html  roadmap.html  (+5 more)
write-rustdoc-hide-lines/: Cargo.toml  README.md  write_rustdoc_hide_lines.sh
(+3985 files in other folders)
