[package]
name = "code-validation"
edition = "2021"
publish = false

[dependencies]
# This should point to `main` when we are preparing for the next release,
# but should be fixed at the latest release once it is published on crates.io
bevy = "0.13"
# bevy = { git = "https://github.com/bevyengine/bevy" }

[lints]
workspace = true
