[package]
name = "code-validation"
edition = "2021"
publish = false

[dependencies]
# This should normally point towards the latest stable Bevy release (such as `0.14`). When
# preparing for a new release, this should be updated to point towards the latest release
# candidate (such as `0.15.0-rc.1`).
bevy = "0.14"

[lints]
workspace = true
