[package]
name = "generate-assets"
version = "0.1.0"
authors = [
  "Bevy Contributors <bevyengine@gmail.com>",
  "Carter Anderson <mcanders1@gmail.com>",
]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
regex = "1"
cargo_toml = "0.11.5"
url = "2.2.2"
anyhow = "1.0.58"
base64 = "0.13.0"
cratesio-dbdump-lookup = "0.1.1"
cratesio-dbdump-csvtab = "0.2.2"
ureq = { version = "2.5.0", features = ["json"] }
dotenv = "0.15.0"
image = "0.24"
