[package]
name = "generate-awesome"
version = "0.1.0"
authors = [
  "Bevy Contributors <bevyengine@gmail.com>",
  "Carter Anderson <mcanders1@gmail.com>",
]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1", features = [ "derive" ] }
