[package]
name = "generate-community"
version = "0.1.0"
authors = [
  "Bevy Contributors <bevyengine@gmail.com>",
]
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.94"
toml = "0.7"
regex = "1.5"
rand = "0.8"
unicode-segmentation = "1.10"
