[package]
name = "generate-errors"
version = "0.1.0"
authors = [
  "Bevy Contributors <bevyengine@gmail.com>",
  "Carter Anderson <mcanders1@gmail.com>",
]
license = "MIT"
edition = "2018"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
regex = "1.10.3"
