[package]
name = "generate-errors"
authors = [
  "Bevy Contributors <support@bevy.org>",
  "Carter Anderson <mcanders1@gmail.com>",
]
license = "MIT"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
regex = "1.10.3"
