[package]
name = "generate-migration-guide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.5.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.58"
pulldown-cmark = "0.9.2"
base64 = "0.13.0"
dotenv = "0.15.0"