[package]
name = "generate-release"
edition = "2021"
publish = false

[dependencies]
ureq = { version = "2.5.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.58"
pulldown-cmark = "0.9.2"
clap = { version = "4.0.18", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
regex = "1.7.0"
dotenvy = "0.15.6"
serde_json = "1.0.91"
rayon = "1.10.0"
thiserror = "1.0.61"
toml = "0.9.7"

[lints]
workspace = true
